--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -764,10 +764,10 @@ html, body {
   
 }
   
-.iti__flag {background-image: url("/app/build/img/flags.png");}
+.iti__flag {background-image: url("./app/build/img/flags.png");}
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-  .iti__flag {background-image: url("/app/build/img/flags@2x.png");}
+  .iti__flag {background-image: url("./app/build/img/flags@2x.png");}
 }
 
 // workaround
