--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -230,7 +230,7 @@ html .intro-message, body .intro-message {
 html .intro-message > h1, body .intro-message > h1 {
   margin: 0;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
-  font-size: 4.4em;
+  font-size: 4.2em !important;
 }
 
 html .intro-message > h3, body .intro-message > h3 {
@@ -779,6 +779,228 @@ html .footer, html .push, body .footer, body .push {
   height: 4em;
 }
 
+@media (min-width: 1281px) {
+  html, body {
+    /* CSS */
+    /* Style the button that is used to open and close the collapsible content */
+    /* Set the size of the div element that contains the map */
+  }
+  html header nav, body header nav {
+    height: 8rem !important;
+  }
+  html .heroBg, body .heroBg {
+    background-size: cover !important;
+  }
+  html .intro-divider, body .intro-divider {
+    width: 38rem !important;
+  }
+  html .intro-header, body .intro-header {
+    padding-top: 50px !important;
+    padding-bottom: 50px !important;
+  }
+  html .intro-message, body .intro-message {
+    padding-top: 14% !important;
+    padding-bottom: 14% !important;
+  }
+  html .structure, body .structure {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
+  }
+  html .structure, body .structure {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-line-pack: stretch;
+        align-content: stretch;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  html .structure .view, body .structure .view {
+    max-width: 33rem;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    margin: 0;
+    float: left;
+  }
+  html .structure .price, body .structure .price {
+    font-size: 18px;
+  }
+  html .structure .view button, body .structure .view button {
+    padding: 12px;
+    cursor: pointer;
+    width: 80%;
+    font-size: 18px;
+  }
+  html .structure .middle, body .structure .middle {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    height: auto;
+    display: inline-block;
+    -ms-flex-item-align: center;
+        align-self: center;
+    font-size: 1.8rem;
+  }
+  html .structure .right, body .structure .right {
+    display: inline-block;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    margin: 0;
+    max-width: 36.8rem;
+  }
+  html .structure form h3, body .structure form h3 {
+    font-size: 2.60rem;
+  }
+  html .structure form p, body .structure form p {
+    font-size: 1.6rem;
+  }
+  html .structure form input, body .structure form input {
+    width: 88%;
+    padding: .6rem;
+    margin: .6rem;
+    font-size: 1.7rem;
+    text-align: center;
+  }
+  html .structure form input[type=submit], body .structure form input[type=submit] {
+    padding: 1rem;
+    margin-top: 1.4rem;
+    margin-bottom: 1.8rem;
+  }
+  html .structure form input[type=tel], body .structure form input[type=tel] {
+    width: 320px !important;
+    padding: .6rem;
+    margin: .6rem;
+  }
+  html .structure form input[type=text], body .structure form input[type=text] {
+    padding: .6rem !important;
+    margin: .6rem !important;
+  }
+  html .collapsible, body .collapsible {
+    cursor: pointer;
+    padding-left: 38px;
+    padding-top: 30px;
+    padding-bottom: -12px;
+    padding-right: 20px;
+    text-align: left;
+    font-size: 1.80rem;
+    margin: auto;
+  }
+  html .s-content, body .s-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: auto;
+    font-size: 1.80rem;
+    text-align: left;
+    padding-left: 38px;
+    padding-top: 20px;
+    padding-bottom: -20px;
+    padding-right: 20px;
+  }
+  html .s-content .sections, body .s-content .sections {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 18px;
+  }
+  html .s-content .sections .first, body .s-content .sections .first {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    max-width: 40%;
+  }
+  html .reviews, body .reviews {
+    margin: auto;
+    font-size: 1.80rem;
+    padding-left: 38px;
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    background-color: white;
+  }
+  html .reviews .review, body .reviews .review {
+    margin-top: 10px;
+  }
+  html .reviews .review .title, body .reviews .review .title {
+    color: tomato;
+  }
+  html #gallery, body #gallery {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+    width: 100%;
+  }
+  html #gallery div.gallery, body #gallery div.gallery {
+    margin: 1.5px !important;
+    border: 1px solid #ccc;
+    float: left;
+    width: 220px;
+  }
+  html #gallery div.gallery:hover, body #gallery div.gallery:hover {
+    border: 1px solid #777;
+  }
+  html #gallery div.gallery img, body #gallery div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  html #gallery div.desc, body #gallery div.desc {
+    padding: 15px;
+    text-align: center;
+  }
+  html #gallery div.larger, body #gallery div.larger {
+    width: 49.4% !important;
+    float: right;
+  }
+  html #map, body #map {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 500px;
+    /* The height is 400 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
+  }
+  html footer, body footer {
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
 .iti__flag {
   background-image: url("./app/build/img/flags.png");
 }
@@ -839,283 +1061,6 @@ html .footer, html .push, body .footer, body .push {
   ##Device = Desktops
   ##Screen = 1281px to higher resolution desktops
 */
-@media (min-width: 1281px) {
-  /* CSS */
-  .heroBg {
-    background-size: cover !important;
-  }
-  .intro-divider {
-    width: 38rem !important;
-  }
-  .intro-header {
-    padding-top: 50px !important;
-    padding-bottom: 50px !important;
-  }
-  .intro-message {
-    position: relative;
-    padding-top: 14% !important;
-    padding-bottom: 14% !important;
-  }
-  .structure {
-    -webkit-box-orient: horizontal !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: row !important;
-            flex-direction: row !important;
-  }
-  .structure {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -ms-flex-line-pack: stretch;
-        align-content: stretch;
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-  .structure .view {
-    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 33rem;
-    text-align: center;
-    float: left;
-    margin-bottom: 20px;
-    padding-bottom: 1.8rem;
-    height: 55rem;
-    background-color: white;
-    z-index: 5;
-    position: relative;
-  }
-  .structure .price {
-    color: grey;
-    font-size: 22px;
-  }
-  .structure .view button {
-    border: none;
-    outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 80%;
-    font-size: 18px;
-  }
-  .structure .view button:hover {
-    opacity: 0.7;
-  }
-  .structure .middle {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    height: auto;
-    top: 80%;
-    bottom: 20%;
-    display: inline-block;
-    -ms-flex-item-align: end;
-        align-self: flex-end;
-    text-align: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    font-size: 1.8rem;
-    padding: 1.8rem;
-  }
-  .structure .middle #reason {
-    color: whitesmoke;
-  }
-  .structure .middle #benefits {
-    margin: 0;
-    text-align: center;
-  }
-  .structure .middle div.green {
-    color: green;
-    color: yellowgreen;
-    color: black;
-  }
-  .structure .middle hr {
-    color: whitesmoke;
-    width: 22rem;
-    padding-top: -70px;
-    border-style: dashed;
-  }
-  .structure .middle {
-    margin-bottom: 20px;
-    padding-bottom: 1.8rem;
-  }
-  .structure .right {
-    margin-bottom: 20px;
-    padding-bottom: 1.8rem;
-    max-width: 38rem;
-    height: 58rem;
-  }
-  .structure form {
-    border: 1px solid transparent;
-    text-align: center;
-    background-color: white;
-  }
-  .structure form h3 {
-    font-family: "Josefin Sans",sans-serif;
-    font-weight: 20;
-    font-size: 2.88rem;
-    padding: 1rem;
-    margin-right: 10px;
-    margin-left: 10px;
-    color: black;
-    border: 1px dashed black;
-    opacity: .7;
-  }
-  .structure form p {
-    font-family: "Josefin Sans",sans-serif;
-    font-weight: 20;
-    font-size: 1.8rem;
-    color: #0a59b9;
-    opacity: .7;
-  }
-  .structure form ::-webkit-input-placeholder {
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: black;
-    opacity: .5;
-    /* Firefox */
-  }
-  .structure form :-ms-input-placeholder {
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: black;
-    opacity: .5;
-    /* Firefox */
-  }
-  .structure form ::-ms-input-placeholder {
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: black;
-    opacity: .5;
-    /* Firefox */
-  }
-  .structure form ::placeholder {
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: black;
-    opacity: .5;
-    /* Firefox */
-  }
-  .structure form :-ms-input-placeholder {
-    /* Internet Explorer 10-11 */
-    color: black;
-  }
-  .structure form ::-ms-input-placeholder {
-    /* Microsoft Edge */
-    color: black;
-  }
-  .structure form input {
-    width: 88%;
-    padding: .8rem;
-    margin: .8rem;
-    background-color: transparent;
-    color: black;
-    border-style: none;
-    border-bottom: 1px solid black;
-    border-radius: 2px;
-    font-size: 1.8rem;
-    text-align: center;
-  }
-  .structure form input[type=submit] {
-    background-color: #FF8000;
-    color: whitesmoke;
-    border-style: none;
-    padding: 1rem;
-    margin-bottom: 2rem;
-  }
-  .structure form input[type=tel] {
-    width: 330px;
-    padding: .8rem;
-    margin: .8rem;
-  }
-  /* Style the button that is used to open and close the collapsible content */
-  .collapsible {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    line-height: 1.8;
-    background-color: white;
-    color: #0c4358;
-    cursor: pointer;
-    padding-left: 38px;
-    padding-top: 30px;
-    padding-bottom: -12px;
-    padding-right: 20px;
-    width: 100%;
-    border: none;
-    border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
-    text-align: left;
-    outline: none;
-    font-size: 1.80rem;
-    margin: auto;
-  }
-  .s-content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    line-height: 1.8;
-    width: 100%;
-    border: none;
-    list-style: none;
-    margin: auto;
-    color: #0c4358;
-    border-bottom-right-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-    outline: none;
-    font-size: 1.80rem;
-    padding-left: 38px;
-    padding-top: 20px;
-    padding-bottom: -20px;
-    padding-right: 20px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    -webkit-transition: max-height 0.2s ease-out;
-    transition: max-height 0.2s ease-out;
-  }
-  .s-content .sections {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding: 18px;
-  }
-  .s-content .sections hr {
-    padding: 4px;
-  }
-  .s-content .sections .first {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    max-width: 40%;
-  }
-}
-
 /* 
   ##Device = Laptops, Desktops
   ##Screen = B/w 1025px to 1280px
@@ -1428,18 +1373,6 @@ html .footer, html .push, body .footer, body .push {
 @media (min-width: 320px) and (max-width: 480px) {
   body {
     width: 100% !important;
-  }
-  /* CSS */
-  .intro-divider {
-    width: 20rem;
-  }
-  .intro-message {
-    position: relative;
-    padding-top: 20% !important;
-    padding-bottom: 20% !important;
-  }
-  .intro-message > h1 {
-    font-size: 4.2em !important;
   }
 }
 /*# sourceMappingURL=style.css.map */
