--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -186,7 +186,7 @@ html, body {
     .intro-message > h1 {
       margin: 0;
       text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
-      font-size: 4.4em;
+      font-size: 4.2em !important;
     }
     
     .intro-message > h3 {
@@ -788,7 +788,6 @@ html, body {
 
   }
 
-
   /* Set the size of the div element that contains the map */
   #map {
 
@@ -847,6 +846,309 @@ html, body {
     height: 4em;
   }
   
+
+  @media (min-width: 1281px) {
+  
+    header nav {
+      height: 8rem !important;
+    }
+
+    /* CSS */
+    .heroBg {
+      background-size: cover !important;
+    }
+    
+    .intro-divider {
+      width: 38rem !important;
+    }
+    
+    .intro-header {
+      padding-top: 50px !important;
+      padding-bottom: 50px !important;
+    }
+    
+    .intro-message {
+      padding-top: 14% !important;
+      padding-bottom: 14% !important;
+      
+    }
+    
+    .structure {
+      flex-direction: row !important;
+    }
+  
+    .structure {
+  
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-content: stretch;
+      // width: 100%;
+      
+      padding-top: 20px;
+      padding-bottom: 20px;
+    
+      .view {
+
+        max-width: 33rem;
+   
+        align-self: flex-start;
+        margin: 0;
+
+        float: left;
+  
+
+        // margin-bottom: 20px;
+        // padding-bottom: 1.8rem;
+  
+        // height: 55rem;
+        // height: auto;
+       
+      }
+      
+      .price {
+        font-size: 18px;
+      }
+      
+      .view button {
+    
+        padding: 12px;
+      
+        cursor: pointer;
+        width: 80%;
+        font-size: 18px;
+
+      }
+      
+      .middle {
+            
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    
+        height: auto;
+    
+        // top: 80%;
+        // bottom: 20%;
+  
+        display: inline-block;
+        align-self: center;
+   
+        font-size: 1.8rem;
+
+        // padding: 1.8rem;
+   
+        // hr {
+
+        // }
+
+      }
+  
+      // .middle {
+      //   margin-bottom: 20px;
+      //   padding-bottom: 1.8rem;
+      // }
+  
+      .right {
+
+        display: inline-block;
+        align-self: flex-start;
+        margin: 0;
+
+        // margin-bottom: 20px;
+        // padding-bottom: 1.8rem;
+  
+        max-width: 36.8rem;
+        // height: 58rem;
+        // height: auto;
+  
+      }
+    
+      form {
+
+        h3 {
+          font-size: 2.60rem;
+        }
+    
+        p {
+          font-size: 1.6rem;
+        }
+  
+        input {
+    
+          width: 88%;
+          padding: .6rem;
+          margin: .6rem;
+
+          font-size: 1.7rem;
+          text-align: center;
+          
+        }
+    
+        input[type=submit] {
+          padding: 1rem;
+          margin-top: 1.4rem;
+          margin-bottom: 1.8rem;
+        }
+        
+        input[type=tel]{
+          width: 320px !important;
+          padding: .6rem;
+          margin: .6rem;
+        }
+
+        input[type=text] {
+          padding: .6rem !important;
+          margin: .6rem !important;
+        }
+        
+      }
+  
+    }
+  
+  
+     /* Style the button that is used to open and close the collapsible content */
+    .collapsible {
+  
+      cursor: pointer;
+      padding-left: 38px;
+      padding-top: 30px;
+      padding-bottom: -12px;
+      padding-right: 20px;
+  
+      text-align: left;
+     
+      font-size: 1.80rem;
+      margin: auto;
+  
+    }
+  
+    
+    .s-content {
+      
+      display: flex;
+      flex-direction: column;
+   
+      margin: auto;
+
+      font-size: 1.80rem;
+      text-align: left;
+
+      padding-left: 38px;
+      padding-top: 20px;
+      padding-bottom: -20px;
+      padding-right: 20px;
+  
+      .sections {
+  
+        display: flex;
+        flex-direction: row;
+  
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 18px;
+    
+        // hr {
+        //   padding: 4px;
+        // }
+    
+        .first {
+          justify-content: flex-start;
+          max-width: 40%;
+        }
+    
+        .second {
+          // justify-content: flex-end;
+        }
+    
+      }
+
+    }
+   
+    .reviews {
+    
+      margin: auto;
+  
+      font-size: 1.80rem;
+    
+      padding-left: 38px;
+      padding-top: 20px;
+      padding-right: 20px;
+      padding-bottom: 20px;
+      background-color: white;
+      // max-height: 0;
+  
+        .review {
+          margin-top: 10px; 
+  
+          .title {
+            color: tomato;
+          }
+        }
+  
+    }
+  
+    #gallery {
+  
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+  
+      margin-top: 20px !important;
+      margin-bottom: 20px !important;
+  
+      width: 100%;
+  
+      div.gallery {
+        margin: 1.5px !important;
+        border: 1px solid #ccc;
+        float: left;
+        width: 220px;
+      }
+      
+      div.gallery:hover {
+        border: 1px solid #777;
+      }
+      
+      div.gallery img {
+        width: 100%;
+        height: auto;
+      }
+      
+      div.desc {
+        padding: 15px;
+        text-align: center;
+      }
+  
+      div.larger {
+        width: 49.4% !important;
+        float: right;
+      }
+    }
+  
+    /* Set the size of the div element that contains the map */
+    #map {
+  
+      margin-top: 20px;
+      margin-bottom: 20px;
+  
+      height: 500px;
+      /* The height is 400 pixels */
+      width: 100%;
+      /* The width is the width of the web page */
+    }
+  
+    footer {
+  
+      // height: 40vh;
+      margin: auto;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+
+  }
+
+   
 }
   
 .iti__flag {background-image: url("./app/build/img/flags.png");}
@@ -909,320 +1211,6 @@ html, body {
 */
 
 @media (min-width: 1281px) {
-  
-  /* CSS */
-  .heroBg {
-    background-size: cover !important;
-  }
-  
-  .intro-divider {
-    width: 38rem !important;
-  }
-  
-  .intro-header {
-    padding-top: 50px !important;
-    padding-bottom: 50px !important;
-  }
-  
-  .intro-message {
-    position: relative;
-    padding-top: 14% !important;
-    padding-bottom: 14% !important;
-    
-  }
-  
-  .structure {
-    flex-direction: row !important;
-  }
-
-  .structure {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-content: stretch;
-    // width: 100%;
-    
-    padding-top: 30px;
-    padding-bottom: 30px;
-  
-    .view {
-
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      max-width: 33rem;
-     
-      text-align: center;
-   
-      float: left;
-      margin-bottom: 20px;
-      padding-bottom: 1.8rem;
-
-      height: 55rem;
-     
-      background-color: white;
-      z-index: 5;
-      position: relative;
-    }
-    
-    .price {
-      color: grey;
-      font-size: 22px;
-    }
-    
-    .view button {
-      border: none;
-      outline: 0;
-      padding: 12px;
-      color: white;
-      background-color: #000;
-      text-align: center;
-      cursor: pointer;
-      width: 80%;
-      font-size: 18px;
-    }
-    
-    .view button:hover {
-      opacity: 0.7;
-    }  
-
-    .middle {
-          
-      display: flex;
-      flex-direction: column;
-      flex-wrap: nowrap;
-  
-      // height: 28rem;
-      height: auto;
-  
-      top: 80%;
-      bottom: 20%;
-
-      display: inline-block;
-      align-self: flex-end;
-
-      // max-width: 40rem;
-      text-align: center;
-      align-items: center;
-      align-content: center;
-      // font-family: arial;
-      font-size: 1.8rem;
-      // background-color: white;
-  
-      padding: 1.8rem;
-  
-      // border-bottom: 4px solid rgb(235, 228, 228);
-      // border-bottom-left-radius: 2px;
-      // border-bottom-right-radius: 2px;
-      
-      #reason {
-        color: whitesmoke;
-        
-      }
-
-      #benefits {
-        margin: 0;
-        text-align: center;
-      }
-  
-      div.green {
-        color: green;
-        color: yellowgreen;
-        color: black;
-      }
-      
-      hr {
-
-        color: whitesmoke;
-        width: 22rem;
-        // border-bottom: 1px dashed whitesmoke;
-        padding-top: -70px;
-        border-style: dashed;
-
-      }
-    }
-
-    .middle {
-      margin-bottom: 20px;
-      padding-bottom: 1.8rem;
-    }
-
-    .right {
-
-      margin-bottom: 20px;
-      padding-bottom: 1.8rem;
-
-      max-width: 38rem;
-      height: 58rem;
-
-    }
-  
-    form {
-  
-      // display: block;
-      border: 1px solid transparent;
-      text-align: center;
-      // border-radius: 8px;
-      
-      // background-color: #78A4DA;
-      background-color: white;
-
-      h3 {
-        font-family: "Josefin Sans",sans-serif;
-        font-weight: 20;
-        font-size: 2.88rem;
-        padding: 1rem;
-        margin-right: 10px;
-        margin-left: 10px;
-        color: black;
-        border: 1px dashed black;
-        opacity: .7;
-      }
-  
-      p {
-        font-family: "Josefin Sans",sans-serif;
-        font-weight: 20;
-        font-size: 1.8rem;
-        color: #0a59b9;
-        opacity: .7;
-      }
-      
-      ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-        color: black;
-        opacity: .5; /* Firefox */
-      }
-      
-      :-ms-input-placeholder { /* Internet Explorer 10-11 */
-        color: black;
-      }
-      
-      ::-ms-input-placeholder { /* Microsoft Edge */
-        color: black;
-      }
-
-      input {
-  
-        width: 88%;
-        padding: .8rem;
-        margin: .8rem;
-
-        // background-color: #78A4DA;
-        background-color: transparent;
-
-        color: black;
-
-        border-style: none;
-        border-bottom: 1px solid black;
-
-        border-radius: 2px;
-
-        font-size: 1.8rem;
-        text-align: center;
-        
-      }
-  
-      input[type=submit] {
-        background-color: #FF8000;
-        color: whitesmoke;
-        border-style: none;
-        padding: 1rem;
-        margin-bottom: 2rem;
-      }
-      
-      input[type=tel]{
-        width: 330px;
-        padding: .8rem;
-        margin: .8rem;
-      }
-      
-    }
-
-  }
-
-
-  /* Style the button that is used to open and close the collapsible content */
-  .collapsible {
-
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    line-height: 1.8;
-
-    background-color: white;
-    color: rgb(12, 67, 88);
-
-    cursor: pointer;
-    padding-left: 38px;
-    padding-top: 30px;
-    padding-bottom: -12px;
-    padding-right: 20px;
-
-    width: 100%;
-    border: none;
-    border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
-    text-align: left;
-    outline: none;
-    font-size: 1.80rem;
-    margin: auto;
-
-  }
-
-  
-  .s-content {
-    
-    display: flex;
-    flex-direction: column;
-
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    line-height: 1.8;
- 
-    width: 100%;
-    border: none;
-    
-    list-style: none;
-    margin: auto;
-
-    color: rgb(12, 67, 88);
-    
-    border-bottom-right-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-    // text-align: left;
-    outline: none;
-
-    font-size: 1.80rem;
-  
-    padding-left: 38px;
-    padding-top: 20px;
-    padding-bottom: -20px;
-    padding-right: 20px;
-
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-
-    .sections {
-
-      display: flex;
-      flex-direction: row;
-
-      justify-content: space-between;
-      flex-wrap: wrap;
-      padding: 18px;
-  
-      hr {
-        padding: 4px;
-      }
-  
-      .first {
-        justify-content: flex-start;
-        max-width: 40%;
-      }
-  
-      .second {
-        // justify-content: flex-end;
-      }
-  
-    }
-  }
 
 }
 
@@ -1593,23 +1581,4 @@ html, body {
     width: 100% !important;
   }
 
-  /* CSS */
-  .intro-divider {
-    width: 20rem;
-  }
-  
-  .intro-message {
-    position: relative;
-    padding-top: 20% !important;
-    padding-bottom: 20% !important;
-    
-  }
-  
-  .intro-message > h1 {
-    font-size: 4.2em !important;
-  }
-  
-
-
-  
 }
