--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -112,6 +112,19 @@ html, body {
         text-align: left;
         line-height: 2;
       }
+
+      #pictures {
+
+        // width: 55px;
+        // border: 1px solid whitesmoke;
+        align-self: center;
+        // margin-left: 48%;
+
+        // a {
+         
+        // }
+        
+      }
     }
   
     .search-cover-photo-container, .heroBg {
