--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -40,6 +40,13 @@ html, body {
 
               li:hover {
                 background: #20201f;
+                
+              }
+              
+              li a {
+                list-style: none;
+                color:#f8f8f8 !important;
+                font-size: 16px !important;
               }
               
             }
@@ -50,8 +57,8 @@ html, body {
 
       
       .topnav {
-        border-bottom-left-radius: .5em;
-        border-bottom-right-radius: .5em;
+        // border-bottom-left-radius: .5em;
+        // border-bottom-right-radius: .5em;
         border-bottom-style: hidden;
       }
 
