--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -38,6 +38,10 @@ html, body {
 
             ul {
 
+              li {
+                font-size: 16px !important;
+              }
+
               li:hover {
                 background: #20201f;
                 
