header, footer border style adjust

--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -139,6 +139,8 @@ html header nav .topnav .collapse ul li a, body header nav .topnav .collapse ul 
 }
 
 html header .topnav, body header .topnav {
+  border-bottom-left-radius: .48em;
+  border-bottom-right-radius: .48em;
   border-bottom-style: hidden;
 }
 
@@ -803,6 +805,9 @@ html footer, body footer {
       -ms-flex-direction: row;
           flex-direction: row;
   text-align: center;
+  border-top-left-radius: .48em;
+  border-top-right-radius: .48em;
+  border-top-style: hidden;
 }
 
 html p.copyright, body p.copyright {
