--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -221,8 +221,8 @@ html, body {
     
     .intro-message {
       position: relative;
-      padding-top: 20%;
-      padding-bottom: 20%;
+      padding-top: 28% !important;
+      // padding-bottom: 20% !important;
 
     }
     
