intro-message padding bottom adjust

--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -222,7 +222,7 @@ html, body {
     .intro-message {
       position: relative;
       padding-top: 28% !important;
-      // padding-bottom: 20% !important;
+      padding-bottom: 28% !important;
 
     }
     
