--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -276,6 +276,7 @@ html .intro-header, body .intro-header {
 html .intro-message, body .intro-message {
   position: relative;
   padding-top: 28% !important;
+  padding-bottom: 28% !important;
 }
 
 html .intro-message > h1, body .intro-message > h1 {
