--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -223,7 +223,6 @@ html, body {
       position: relative;
       padding-top: 28% !important;
       padding-bottom: 28% !important;
-
     }
     
     .intro-message > h1 {
@@ -914,7 +913,7 @@ html, body {
       }
       
       .intro-message {
-     
+        padding-top: 20% !important;
         padding-bottom: 3% !important;
       }
 
@@ -1016,6 +1015,7 @@ html, body {
       
       .intro-message {
      
+        padding-top: 20% !important;
         padding-bottom: 8% !important;
         
       }
@@ -1128,7 +1128,8 @@ html, body {
       }
       
       .intro-message {
-     
+
+        padding-top: 20% !important;
         padding-bottom: 8% !important;
         
       }
@@ -1219,7 +1220,6 @@ html, body {
   
       }
       
-      
     }
 
     /* 
@@ -1243,7 +1243,8 @@ html, body {
       
       .intro-message {
         position: relative;
-        
+        padding-top: 20% !important;
+        padding-bottom: 20% !important;
       }
       
       #marketing {
@@ -1434,9 +1435,10 @@ html, body {
       }
       
       .intro-message {
-        // padding-top: 14% !important;
+  
+        padding-top: 20% !important;
         padding-bottom: 12% !important;
-        
+       
       }
       
       .structure {
