--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -205,7 +205,7 @@ html .wrapper #pictures, body .wrapper #pictures {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  z-index: 3;
+  z-index: 3 !important;
 }
 
 html .search-cover-photo-container, html .heroBg, body .search-cover-photo-container, body .heroBg {
