--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -131,7 +131,7 @@ html, body {
         // border: 1px solid whitesmoke;
         align-self: center;
         // margin-left: 48%;
-        z-index: 3;
+        z-index: 3 !important;
 
         // a {
          
