--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -597,7 +597,7 @@ html .structure form input, body .structure form input {
   border-radius: 2px;
   font-size: 1.55rem;
   text-align: center;
-  z-index: 3;
+  z-index: 5 !important;
 }
 
 html .structure form input[type=submit], body .structure form input[type=submit] {
@@ -1606,7 +1606,6 @@ body {
   height: 100px;
   position: absolute;
   width: 100px;
-  z-index: 1;
 }
 
 .bubble:after {
