--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -462,6 +462,8 @@ html, body {
 
       .right {
 
+        z-index: 1;
+        
         margin-bottom: 20px;
 
         max-width: 28rem;
@@ -546,7 +548,7 @@ html, body {
           font-size: 1.55rem;
           text-align: center;
 
-          z-index: 5!important;
+          z-index: 3 !important;
           
         }
     
