--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -346,7 +346,7 @@ html, body {
       align-items: center;
       justify-content: center;
 
-      z-index: 2;
+      // z-index: 2;
 
       .view {
 
@@ -463,7 +463,7 @@ html, body {
       .right {
 
         z-index: 1;
-        
+
         margin-bottom: 20px;
 
         max-width: 28rem;
