--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -257,7 +257,7 @@ html, body {
       margin-left: auto;
 
       margin-top: auto;
-      z-index: 2;
+      // z-index: 2;
 
       section {
         padding-top: 4rem;
