--- a/app/static/style/style.scss
+++ b/app/static/style/style.scss
@@ -9,6 +9,8 @@
 
 html, body {
 
+    font-family: "Josefin Sans",sans-serif;
+    
     width: 100%;
     height: 100%;
     background: #78A4DA;
@@ -62,8 +64,8 @@ html, body {
 
       
       .topnav {
-        border-bottom-left-radius: .48em;
-        border-bottom-right-radius: .48em;
+        border-bottom-left-radius: .28em;
+        border-bottom-right-radius: .28em;
         border-bottom-style: hidden;
       }
 
@@ -876,8 +878,8 @@ html, body {
 
       text-align: center;
 
-      border-top-left-radius: .48em;
-      border-top-right-radius: .48em;
+      border-top-left-radius: .28em;
+      border-top-right-radius: .28em;
       border-top-style: hidden;
     }
     
